--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -49,3 +49,6 @@ jobs:
 
       - name: Verify that there is no diff after running go generate
         run: go generate ./... && git status && git diff-index --quiet HEAD --
+
+      - name: Verify that the code compiles
+        run: go build main.go
