--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,9 +1,9 @@
-name: PullRequestCI
+name: MasterCI
 
 # Controls when the action runs.
 on:
-  # Triggers the workflow on pull request events but only for the master branch
-  pull_request:
+  # Triggers the workflow on push events but only for the master branch
+  push:
     branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
