Add dictionary compression for big items (#83)
* add tool to train compression dictionary

* add compression dictionary for ledger payloads

* clean up ledger payload extraction binary

* added extractor for block headers

* add header dictionary for compression

* add events dictionary for compression

* enable events compression dictionary

* update header and events dictionaries

* update payload dictionary for compression

* add callback option to mapper run

* fix package imports after rebase

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
+/cmd/extract-block-events/extract-block-events
+/cmd/extract-block-headers/extract-block-headers
+/cmd/extract-ledger-payloads/extract-ledger-payloads
 /data/
-/trie/
 /index/
-/root.checkpoint
+/trie/
 /flow-dps
