Utility for creating a snapshot of a badger database

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/cmd/create-index-snapshot/create-index-snapshot
 /cmd/extract-block-events/extract-block-events
 /cmd/extract-block-headers/extract-block-headers
 /cmd/extract-ledger-payloads/extract-ledger-payloads
