--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,17 +50,17 @@ jobs:
       # This check makes sure that the `go.mod` and `go.sum` files for Go
       # modules are always up-to-date.
       - name: Verify Go modules
-        run: go mod tidy && git status && git diff-index --quiet HEAD --
+        run: go mod tidy && git status && git --no-pager diff && git diff-index --quiet HEAD --
 
       # This check makes sure that the generated protocol buffer files in Go
       # have been updated in case there was a change in the definitions.
       - name: Verify generated files
-        run: go generate ./... && git status && git diff-index --quiet HEAD --
+        run: go generate ./... && git status && git --no-pager diff && git diff-index --quiet HEAD --
 
       # This check makes sure that the source code is formatted according to the
       # Go standard `go fmt` formatting.
       - name: Verify source code formatting
-        run: go fmt ./... && git status && git diff-index --quiet HEAD --
+        run: go fmt ./... && git status && git --no-pager diff && git diff-index --quiet HEAD --
 
       # This check makes sure that we can compile the binary as a pure Go binary
       # without CGO support.
