--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,18 +4,13 @@ name: CI
 # is created or updated.
 on:
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
-# A workflow is made up of one or more jobs, which can be run in sequence or in
-# parallel. In this case, we have a single job, called "check", that runs on
-# the latest Ubuntu image.
 jobs:
   check:
     runs-on: ubuntu-latest
 
-    # A job is made up of sequential steps. The pre-defined checkout step checks
-    # out the source code to $GITHUB_WORKSPACE, while the pre-defined setup-go
-    # step installs the Go at the configured version.
     steps:
       - name: Check out source code
         uses: actions/checkout@v2
