Refactor to add Source component

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,15 @@ jobs:
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1
           go install github.com/srikrsna/protoc-gen-gotag@v0.6.1
 
+      # Since building relic takes some time, we want to cache it.
+      - name: Cache Crypto package
+        uses: actions/cache@v2
+        with:
+          path: ../flow-go/crypto
+          key: ${{ runner.os }}-crypto
+          restore-keys: |
+            ${{ runner.os }}-crypto
+
       # In order to be able to build with flow-go and the relic tag, we need to
       # run its go generate target.
       - name: Install Flow Go's crypto
