--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,6 @@ jobs:
           repository: onflow/flow-go
           path: flow-go
 
-      - name: Move FlowGo to proper path
-        run: mv flow-go ../
-
       - name: Install Go
         uses: actions/setup-go@v2
         with:
@@ -65,7 +62,7 @@ jobs:
       - name: Cache Crypto package
         uses: actions/cache@v2
         with:
-          path: ../flow-go/crypto
+          path: ./flow-go/crypto
           key: ${{ runner.os }}-crypto
           restore-keys: |
             ${{ runner.os }}-crypto
@@ -74,7 +71,7 @@ jobs:
       # run its go generate target.
       - name: Install Flow Go's crypto
         run: |
-          cd ../flow-go/crypto
+          cd ./flow-go/crypto
           git fetch
           git checkout ac090a188c979fbcd1b1711271f5b7d1281f76d9
           go generate .
