--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,6 @@ jobs:
           repository: onflow/flow-go
           path: flow-go
 
-      - name: Move FlowGo to proper path
-        run: mv flow-go ../
-
       - name: Install Go
         uses: actions/setup-go@v2
         with:
@@ -65,7 +62,7 @@ jobs:
       # run its go generate target.
       - name: Install Flow Go's crypto
         run: |
-          cd ../flow-go/crypto
+          cd ./flow-go/crypto
           git checkout ac090a188c979fbcd1b1711271f5b7d1281f76d9
           go generate .
 
