--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,15 @@
 /cmd/flow-access-server/flow-access-server
 /cmd/flow-dps-client/flow-dps-client
 /cmd/flow-dps-indexer/flow-dps-indexer
+/cmd/flow-dps-live/flow-dps-live
 /cmd/flow-dps-server/flow-dps-server
 /cmd/flow-rosetta-server/flow-rosetta-server
 /cmd/restore-index-snapshot/restore-index-snapshot
+/bootstrap/
 /data/
+/flow-go/
 /index/
 /trie/
 *.cdc
-*.log
 *.checkpoint
-dist/
+*.log
