--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: onflow/flow-go
+          ref: c0afa789365eb7a22713ed76b8de1e3efaf3a70a
           path: flow-go
 
       - name: Install Go
@@ -63,7 +64,6 @@ jobs:
       - name: Install Flow Go's crypto
         run: |
           cd ./flow-go/crypto
-          git checkout c0afa789365eb7a22713ed76b8de1e3efaf3a70a
           go generate .
 
       # This check makes sure that the `go.mod` and `go.sum` files for Go
