Fix live indexer issues (#407)
* Enable bootstrap skipping flag

* Update Flow Go unstaked consensus follower dependency

* Inject protocol state DB and return final state commitment

* Inject correct protocol state database

* Add consensus follower startup code

* Add flag to skip indexing of registers

* Inject log level into consensus follower

* Add logging output to consensus follower and waiting

* Keep track of last finalized height in consensus follower

* Add fallback to disk retrieval to consensus follower

* Add logging to execution follower

* Rename DPS side of followers to trackers

* Add component filed to log output

* Add logging for GCP cloud streamer

* Add more log output to GCP streamer

* Add work-around for root block commit

* Fix returning the root commit from consensus tracker

* Removed caching from consensus follower for now

* Panic button

* Add logging to consensus follower

* Clean up consensus tracker

* Add block execution record for root block

* Fix which DB is injected into execution tracker

* Add boom panic debug

* Add polling functionality to record retrieval

* Fix consensus tracker with record retrieval changes

* Fix initialization of last height

* Add concurrency protection to cloud polling

* Change streamer to only download queued block IDs

* Add consumer to avoid missing finalized blocks

* Clean up startup/shutdown with consensus follower

* Add initialization for finalization consumer

* Start consensus tracker at root height

* Add manual protocol state bootstrapping

* Simplify protocol state bootstrapping

* Use valid cache size for bootstrapping

* Add code comments to cloud streamer

* Fix small PR comments

* Update reported Rosetta node version

* Update Flow Go dependency

* Address final PR comments

* Add record validation to cloud streamer

* Skip nil trie updates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: onflow/flow-go
+          ref: c0afa789365eb7a22713ed76b8de1e3efaf3a70a
           path: flow-go
 
       - name: Install Go
@@ -72,8 +73,6 @@ jobs:
       - name: Install Flow Go's crypto
         run: |
           cd ./flow-go/crypto
-          git fetch
-          git checkout ac090a188c979fbcd1b1711271f5b7d1281f76d9
           go generate .
 
       # This check makes sure that the `go.mod` and `go.sum` files for Go
