Make GitHub actions manually triggerable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: CI
 # Continuous integration will run whenever a pull request for the master branch
 # is created or updated.
 on:
+  workflow_dispatch:
   pull_request:
     branches:
       - master
