--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,10 +70,10 @@ jobs:
 
       # In order to be able to build with flow-go and the relic tag, we need to
       # run its go generate target.
-      - name: Install Flow Go's crypto
+      - name: Make Flow Go's crypto
         run: |
-          cd ./flow-go/crypto
-          go generate .
+          cd ./flow-go
+          make crypto_setup_gopath
 
       # This check makes sure that the `go.mod` and `go.sum` files for Go
       # modules are always up-to-date.
