--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          args: -v --build-tags relic
+          args: -v --build-tags relic --timeout=3m
           working-directory: .
           ignore: flow-go
 
