--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,3 +94,37 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  docker-push:
+    name: Push to container registry
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source code
+          uses: actions/checkout@v2
+          with:
+            fetch-depth: 0
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18
+
+      - name: Cache Go modules
+          uses: actions/cache@v2
+          with:
+            path: ~/go/pkg/mod
+            key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+            restore-keys: |
+              ${{ runner.os }}-go-   
+
+      # Provide Google Service Account credentials to Github Action, allowing interaction with the Google Container Registry
+      # Logging in as github-actions@dl-flow.iam.gserviceaccount.com
+      - name: Docker login
+        uses: docker/login-action@v1
+        with:
+          registry: gcr.io
+          username: _json_key
+          password: ${{ secrets.GCR_SERVICE_KEY }}
+      - name: Docker build
+        run: make docker-build-flow-archive
+      - name: Docker push
+        run: make docker-push-flow-archive
