--- a/api/protobuf/buf.gen.yaml
+++ b/api/protobuf/buf.gen.yaml
@@ -21,4 +21,4 @@ plugins:
   - remote: buf.build/planetscale/plugins/vtproto:v0.3.0
     out: ../archive
     opt:
-      - paths=source_relative,require_unimplemented_servers=false,features=marshal+unmarshal+size+pool+grpc
+      - paths=source_relative,features=marshal+unmarshal+size+pool+grpc
