update with tagger dependency

--- a/api/protobuf/buf.gen.yaml
+++ b/api/protobuf/buf.gen.yaml
@@ -6,6 +6,7 @@ managed:
     default: github.com/onflow/archive/api/archive
     except:
       - buf.build/googleapis/googleapis
+      - buf.build/srikrsna/protoc-gen-gotag
 
 plugins:
   # renovate: datasource=github-releases depName=protocolbuffers/protobuf-go
