fix repo change

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,12 @@ jobs:
       - name: Check out source code
         uses: actions/checkout@v2
 
+      - name: Check out FlowGo
+        uses: actions/checkout@v2
+        with:
+          repository: onflow/flow-go
+          path: flow-go
+
       - name: Install Go
         uses: actions/setup-go@v2
         with:
@@ -52,6 +58,15 @@ jobs:
           go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1
           go install github.com/srikrsna/protoc-gen-gotag@v0.6.2
+
+      # Since building relic takes some time, we want to cache it.
+      - name: Cache Crypto package
+        uses: actions/cache@v2
+        with:
+          path: ./flow-go/crypto
+          key: ${{ runner.os }}-crypto
+          restore-keys: |
+            ${{ runner.os }}-crypto
 
       # In order to be able to build with flow-go and the relic tag, we need to
       # run its go generate target.
